# Timemory

./: .gitmodules  CMakeLists.txt  install-and-package-timem.sh
.github/workflows/: release.yml
cmake/Modules/: BuildPAPI.cmake  ConfigBinutils.cmake  ConfigCPack.cmake  ConfigLibunwind.cmake  Options.cmake  Packages.cmake
source/timemory/tpls/cereal/cereal/types/: array.hpp
source/timemory/utility/: argparse.cpp  argparse.hpp  filepath.cpp
source/tools/timemory-pid/: CMakeLists.txt
source/tools/timemory-timem/: CMakeLists.txt  libtimem.cpp  libtimem.hpp  main.c  timem.cpp
